# bestfriendbot

./: .gitignore  Cargo.toml  README.md  test_faucet.sh
contracts/batch_transfer/: Cargo.toml
contracts/batch_transfer/src/: lib.rs  test.rs
contracts/batch_transfer/test_snapshots/test/: find_max_batch_size.1.json  find_max_batch_size.10.json  find_max_batch_size.11.json  find_max_batch_size.12.json  find_max_batch_size.13.json  find_max_batch_size.15.json  find_max_batch_size.16.json  find_max_batch_size.17.json  find_max_batch_size.18.json  find_max_batch_size.19.json  find_max_batch_size.2.json  find_max_batch_size.20.json  find_max_batch_size.21.json  find_max_batch_size.22.json  find_max_batch_size.3.json  find_max_batch_size.4.json  find_max_batch_size.5.json  find_max_batch_size.6.json  find_max_batch_size.7.json  find_max_batch_size.8.json  find_max_batch_size.9.json  test_empty_batch.1.json  test_happy_path.1.json  test_partial_failure.1.json
faucet/: Cargo.toml
faucet/src/: api.rs  batch.rs  config.rs  error.rs  main.rs  queue.rs  tx.rs
scripts/: submit_every_ledger.sh
